# Momo-Study-Agent

./: .antigravity_rules.md  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  =1.40.0  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  PROJECT_PLAN.md  PROJECT_STATUS.md  README.md  ai_momo_automation.py  config.py  db_manager.py  debug_isolate_import.py  debug_repro.py  debug_sql.py  debug_uvicorn_import.py  files_ai_evaluator.txt  files_mvp_script.txt  findings.md  gem_prompt.md  gemini_client.py  maimemo_api.py  main.py  progress.md  pyproject.toml  requirements.txt  score_prompt.md  study_workflow.py  sync_manager.py  task_plan.md  temp_inspect.db-wal  test_concurrency_refactor.py  test_import_fix.py  test_onedrive_isolation.py  test_study.py  ui_manager.py  (+1 more)
.backup_pulldb/: PullDB.py
.claude/: settings.json
.planning/: .active_plan
.planning/2026-05-19-dual-database-refactoring/: findings.md  progress.md  task_plan.md
.planning/2026-05-22-drop-libsql-backend/: .attestation  findings.md  progress.md  task_plan.md
compat/: __init__.py  gemini_client.py  maimemo_api.py
config/: logging.yaml  test_config.yaml
core/: active_profile_registry.py  config_wizard.py  constants.py  db_manager.py  encryption.py  exceptions.py  factories.py  feature_flags.py  gemini_client.py  iteration_manager.py  litellm_client.py  litellm_config.py  litellm_presets.py  log_archiver.py  log_config.py  logger.py  maimemo_api.py  metrics.py  mimo_client.py  preflight.py  profile_loader.py  profile_manager.py  prompt_iteration_db.py  settings.py  study_flow.py  study_workflow.py  sync_manager.py  sync_priority.py  ui_manager.py  utils.py  weak_word_filter.py  word_lookup.py  word_models.py  word_service.py
data/: README.md
data/benchmark/: custom_test_set.json
data/db_init_markers/: README.md
data/profiles/: README.md
data/prompts/: README.md
database/: README.md  _repo_helpers.py  cache_client.py  community_lookup.py  connection.py  dto.py  execution_engine.py  hub_users.py  legacy.py  momo_words.py  notes_repo.py  progress_repo.py  schema.py  session.py  sql_constants.py  sync_coordinator.py  sync_debouncer.py  sync_healer.py  sync_service.py  utils.py  word_repo.py  word_state.py
database/backends/: __init__.py  _libsql.py  _protocol.py  _pyturso.py
database/connection/: __init__.py  context.py  factory.py  singleton.py
database/migrations/: V001_initial.py  V002_match_confidence.py  V003_last_synced_content.py  V004_backfill_conflict_last_synced.py  V005_is_customized.py  V007_migrate_db_format.py  __init__.py  runner.py
docs/: CHANGELOG.md  DOCUMENT_INDEX.md  LOGGING_OPTIMIZATION_SUMMARY.md  Oringinal Prompt.md  README.md  TECHNICAL_DETAILS.md  project_architecture_analysis.md
docs/api/: maimemo_openapi.yaml  momo_api_summary.md  turso_api.md  xiaomi_mimo_api.md
docs/architecture/: ARCHITECTURE.md  DATABASE_DESIGN.md  DATA_FLOW.md  LOG_SYSTEM.md  OVERVIEW.md  SYSTEM_ARCHITECTURE.md  decision_flow.md
docs/dev/: AI_CONTEXT.md  AI_REVIEW_20260514_TODAY_TASK_PIPELINE.md  AUTO_SYNC.md  CONTRIBUTING.md  DECISIONS.md  DEVELOPMENT.md  DOCS_COMPLETION_SUMMARY.md  DOCS_OPTIMIZATION_SUMMARY.md  EMBEDDED_REPLICAS_PHASE_0_2_COMPLETION.md  LOGGING.md  LOGGING_LEVELS.md  NEW_USER_ZERO_CREDENTIAL_PLAN.md  PHASE_2_WRITE_SIMPLIFICATION.md  PROJECT_CLEANUP_PLAN_2026-04-20.md  PROMPT_OPTIMIZER_PLAN.md  QUICK_START.md  REFACTOR_PROGRESS.md  SYNC_OPTIMIZATION_PLAYBOOK.md  SYNC_PRIORITY_MATRIX.md  VIBE_CODING_SUMMARY.md  WEB_UI_EXEC_PLAN.md  WEB_UI_PLAN.md  WEB_UI_STATUS.yaml
docs/history/: DOCS_COMPLETION_SUMMARY.md  DOCS_OPTIMIZATION_SUMMARY.md  NEW_USER_ZERO_CREDENTIAL_PLAN.md  (+2 more)
logs/: README.md
scratch/: env_check.py  verify_archiving.py  verify_final.py
scripts/: _debug_backend.py  _debug_er.py  _pull_monitor.py  debug_http_db.py  debug_turso.py  dev_tools.py  diag_dump_stuck_pid.py  export_web_openapi.py  generate_frontend_types.py  init_hub.py  migrate_turso_cloud_db.py  migrate_turso_db_group.py  prompt_dev_tool.py  rollback_interpretations.py  setup_test_databases.py  start_web.py  test_similarity.py  validate_pyturso_compat.py  verify_embedded_replica.py  verify_er_quick.py
temp/: history-asher.db-info  history-asher.db-shm  history-ddy.db-info  history-ddy.db-shm  momo-study.db-info  momo-study.db-wal  momo-users-hub.db-info
tests/: README_TESTING.md  conftest.py  factories.py  generate_evaluation_report.py  test_apple.py  test_async_logging.py  test_batch_comparison.py  test_full_integration.py  test_init.py  test_mimo_pipeline.py  test_raw_fix.py  test_run.py  test_sample_run.py  test_sync_coordinator_adaptive_debounce.py  test_sync_coordinator_dirty_flag.py  test_sync_healer.py  test_sync_manager_immediate_flush.py  test_sync_queue_fix.py
tools/: check_api_status.py  check_docs_quality.py  diagnose_sync_pending_gap.py  preflight_check.py  reconcile_conflicts.py  test_context_logger_core.py  test_iteration_optimized.py  test_logging_levels.py  test_today_items.py  verify_logging_integration.py
web/: __init__.py  __main__.py
(+315 files in other folders)
